--- a/index.html
+++ b/index.html
@@ -2,86 +2,7 @@
 <html>
 <head>
 	<title>Homepage</title>
-
-<style>
-
-	body {
-		margin: 0px;
-		padding: 0px;
-		background: url("img/bg.jpg") no-repeat center center fixed;
-		-webkit-background-size: cover;
-	    -moz-background-size: cover;
-	    background-size: cover;
-	    -o-background-size: cover;
-	}
-
-	
-	.header h1,h4 {
-	    /*text-transform: uppercase;*/
-	    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-	    line-height: 25px;
-	    /*letter-spacing: 10px;*/
-	    color: white;
-	    text-align: center;
-	}
-
-	.header h1 {
-		font-size: 65px;
-	}
-
-	.header h4 {
-		font-weight: lighter;
-		font-size: 18px;
-		letter-spacing: 3px;
-	}
-
-	.navbar {
-		width: 100%;
-		height: 80px;
-		background-color: white;
-		opacity: 0.9;
-		text-align: center;
-	}
-
-	.navbar ul {
-		list-style-type: none;
-		display: inline-block;
-		/*padding-left: 20px;*/
-	}
-
-	.navbar ul li {
-		float: left;
-		line-height: 50px;
-		/*text-align: center;*/
-	}
-
-	.navbar ul li a {
-
-		text-decoration: none;
-		font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-		color: grey;
-		padding-left: 40px;
-		/*margin:20px;*/
-	}
-
-	hr {
-	    max-width: 400px;
-	    border-color: #999999;
-	}
-
-	.box {
-		margin-top: 1%;
-		margin-left:15%;
-		width: 900px;
-		height: 500px;
-		background-color: white;
-		opacity: 0.9;
-	} 
-
-	li:first-child {
-		margin-left: 50px;
-	}
-</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	
@@ -100,7 +21,17 @@
 	</div>
 
 	<div class="box">
-		
+		 <img src="img/slide-1.jpg">
+
+		 <p>Welcome To</p>
+		 <h1>Business Casual</h1>
+		 <h5>BY START BOOTSTRAP</h5>
+	</div>
+
+	<div class="box2">
+		<div class="hr"> <hr> </div>
+
+		<!-- <img src="img/intro-pic.jpg"> -->
 	</div>
 </body>
 </html>
